syntax = "proto3";

package grpc_shortener;

option go_package = "internal/grpcShortener";

service Shortener {
    rpc GetStats(GetStatsRequest) returns(GetStatsResponse);
    rpc Ping(PingRequest) returns(PingResponse);
    rpc Create(CreateRequest) returns(CreateResponse);
};

// GetStats
message GetStatsRequest {}
message GetStatsResponse {
    uint32 count_urls = 1;
    uint32 count_users = 2;
}

// Ping
message PingRequest {}
message PingResponse {}

//Create
message CreateRequest{
    string original = 1;
}
message CreateResponse{
    string short = 1;
}

//CreateBatch

message CreateBatchRequest{
    repeated CreateBatchRequestItem list = 1;
}
message CreateBatchRequestItem {
    string correlation_id = 1;
    string original_url = 2;
}

message CreateBatchResponse{
    repeated CreateBatchResponseItem list = 1;
}
message CreateBatchResponseItem {
    string correlation_id = 1;
    string short_url = 2;
}
